# BU161221_1_linux_port

./: .gitignore
BU161221_1/: 1.SEQ  1.SPK  10.SEQ  1TRY.SEQ  2.SEQ  2.SPK  3.SEQ  3.SPK  4.SEQ  4.SPK  5.SEQ  5.SPK  6.SEQ  6.SPK  7.SEQ  7.SPK  8.SEQ  9.SEQ  ARGV.CPP  ATNTEST.CPP  BU161221.DSK  BU161221.MAP  BU161221.PRJ  BU161221.SYM  CALREP.TXT  CBLSEQ.CPP  CCONFIG.H  CHNGRQST.TXT  CMTEST.CPP  COMMON.H  CONFIG.CPP  CONFIG1.CPP  COPYRITE.H  CRTEST.CPP  CT.H  CTS.CPP  CTS.H  CTS.INI  CUPGTEST.CPP  CUPITEST.CPP  (+147 more)
BU161221_1/DATA/: 191.USE  192.USE  193.USE  194.USE  195.USE  196.USE  197.USE  198.USE  199.USE  200.USE  201.USE  202.USE  203.USE  204.USE  205.USE  206.USE  207.USE  208.USE  209.USE  210.USE  211.USE  212.USE  213.USE  214.USE  215.USE  216.USE  217.USE  218.USE  219.USE  220.USE  221.USE  222.USE  223.USE  224.USE  225.USE  226.USE  227.USE  228.USE  229.USE  230.USE  (+4 more)
BU161221_1_linux_port/: *.h  CMakeLists.txt  README_LINUX_PORT.md  linux_borland_compat.h  mak.ol
